Fixed min-width for selection panel to ensure all buttons are visible

--- a/html/css/panel.css
+++ b/html/css/panel.css
@@ -8,7 +8,7 @@
   bottom: 125px;
   left: 25px;
 
-  min-width: 290px;
+  min-width: 310px;
   width: 25%;
   max-width: 500px;
   user-select: none;
